fixed button width
fixed layout shift

added font preload

--- a/src/_includes/scss/components/_navbar.scss
+++ b/src/_includes/scss/components/_navbar.scss
@@ -53,5 +53,7 @@
 
 .theme-toggle {
   display: block;
+  width: 32px;
+  height: 32px;
   cursor: pointer;
 }
